[gd_scene load_steps=7 format=2]

[ext_resource path="res://Buttons/Prove_Sus.gd" type="Script" id=1]
[ext_resource path="res://Generic/sc_adder.gd" type="Script" id=2]
[ext_resource path="res://Buttons/Improved_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buttons/Judgement.gd" type="Script" id=4]
[ext_resource path="res://Generic/Music_Changer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Generic/Generic_bg.tscn" type="PackedScene" id=6]

[node name="Castle" instance=ExtResource( 6 )]

[node name="Text" parent="." index="1"]
text = "You tell the Queen you have found a flask by the forest, and take it out of your backpack as a proof. The Queen seems reflective.

\"We don't know for sure this flask belongs to the Wizard, but you are right, it is rather strange...\""

[node name="Image" parent="." index="2"]
rect_pivot_offset = Vector2( 601.754, 368 )
text = "

               /\\      
              /()\\
           |\\/    \\/|
          _|/ |^^| \\|_ 
          \\|  ('')  |/
           |  \\--/  |
          _|_/ )( \\_|_
         |@@|_(/\\)_|@@|
   - ----|__|_/__\\_|__|---- -"

[node name="Castle" parent="." index="5" instance=ExtResource( 5 )]

[node name="Flask_Proved" type="Node2D" parent="." index="6"]
script = ExtResource( 2 )

[node name="Prove_Guard" parent="." index="7" instance=ExtResource( 3 )]
margin_left = 36.0
margin_top = 413.0
text = "Also, I got the guard's testimony"

[node name="Prove_Sus" parent="." index="8" instance=ExtResource( 3 )]
margin_left = 36.0
margin_top = 436.0
text = "Also, he is suspicious"
script = ExtResource( 1 )

[node name="Judgement" parent="." index="9" instance=ExtResource( 3 )]
margin_left = 36.0
margin_top = 459.0
text = "Is what I said enough, my Queen?"
script = ExtResource( 4 )
