[gd_scene load_steps=9 format=2]

[ext_resource path="res://Buttons/Judgement.gd" type="Script" id=1]
[ext_resource path="res://Buttons/Prove_Flask.gd" type="Script" id=2]
[ext_resource path="res://Buttons/Prove_Sus.gd" type="Script" id=3]
[ext_resource path="res://Generic/sc_adder.gd" type="Script" id=4]
[ext_resource path="res://Generic/Generic_bg.tscn" type="PackedScene" id=5]
[ext_resource path="res://Generic/Music_Changer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Buttons/Improved_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://Buttons/Prove_Notes.gd" type="Script" id=8]

[node name="Castle" instance=ExtResource( 5 )]

[node name="Text" parent="." index="1"]
text = "You tell the Queen about the guard testimony, that collocates the wizard near the forest during the plague.

\"I know that guard\", she says, reclutantly. \"He isn't much sharp, but is loyal and sincere. I'll convocate him right away to confirm his testimony.\""

[node name="Image" parent="." index="2"]
text = "

               /\\      
              /()\\
           |\\/    \\/|
          _|/ |^^| \\|_ 
          \\|  ('')  |/
           |  \\--/  |
          _|_/ )( \\_|_
         |@@|_(/\\)_|@@|
   - ----|__|_/__\\_|__|---- -"

[node name="Accuse" parent="." index="5" instance=ExtResource( 6 )]

[node name="Guard_Proved" type="Node2D" parent="." index="6"]
script = ExtResource( 4 )

[node name="Prove_Flask" parent="." index="7" instance=ExtResource( 7 )]
margin_left = 36.0
margin_top = 413.0
text = "Also, I found a flask in the forest"
script = ExtResource( 2 )

[node name="Prove_Notes" parent="." index="8" instance=ExtResource( 7 )]
margin_left = 36.0
margin_top = 436.0
margin_right = 521.0
margin_bottom = 462.0
text = "Also, he wrote weird notes about the plague"
script = ExtResource( 8 )

[node name="Prove_Sus" parent="." index="9" instance=ExtResource( 7 )]
margin_left = 36.0
margin_top = 459.0
text = "Also, he is suspicious"
script = ExtResource( 3 )

[node name="Judgement" parent="." index="10" instance=ExtResource( 7 )]
margin_left = 36.0
margin_top = 482.0
text = "Is what I said enough, my Queen?"
script = ExtResource( 1 )
